# skill

./: .codecov.yml  .mcp.json  .skill-engine.toml  .skill-engine.toml.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SUPPORT.md  deny.toml  ideas.md  install.sh  tarpaulin.toml  terraform.tfstate
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  claude-bridge-tests.yml  docs.yml  performance-tests.yml  publish-npm.yml  publish-pypi.yml  publish.yml  release.yml  security-tests.yml  (+1 more)
.internal/: example-skills-findings.md  session-progress.md  testing-progress.md
crates/skill-cli/: Cargo.toml
crates/skill-cli/benches/: claude_bridge_bench.rs
crates/skill-cli/src/: config.rs  lib.rs  main.rs
crates/skill-cli/src/auth/: commands.rs  mod.rs  provider.rs  token_store.rs
crates/skill-cli/src/auth/providers/: api_key.rs  aws.rs  mod.rs  oauth2.rs
crates/skill-cli/src/commands/: claude.rs  config.rs  enhance.rs  exec.rs  find.rs  info.rs  init.rs  init_skill.rs  install.rs  list.rs  manifest.rs  mod.rs  remove.rs  run.rs  search.rs  serve.rs  setup.rs  upgrade.rs  web.rs
crates/skill-cli/src/commands/claude_bridge/: edge_cases.rs  loader.rs  mod.rs  renderer.rs  script_gen.rs  test_utils.rs  transformer.rs  types.rs  validator.rs
crates/skill-cli/tests/: acceptance_scenarios.rs  claude_bridge_integration.rs  doc_tests.rs  error_tests.rs  mcp_claude_bridge_tests.rs  security_tests.rs  spec_validator.rs
crates/skill-cli/tests/fixtures/: README.md  multi-skill-manifest.toml  simple-manifest.toml
crates/skill-cli/tests/fixtures/manifests/: invalid-syntax.toml  invalid-types.toml  medium.toml  minimal.toml  missing-required.toml  small.toml
crates/skill-cli/tests/fixtures/skills/: reference-minimal.md
crates/skill-context/: Cargo.toml
crates/skill-context/src/: context.rs  environment.rs  inheritance.rs  lib.rs  mounts.rs  resources.rs  runtime.rs  secrets.rs  storage.rs
crates/skill-context/src/providers/: env.rs  file.rs  keychain.rs  mod.rs
crates/skill-http/: Cargo.toml
crates/skill-http/src/: embedded.rs  handlers.rs  lib.rs  middleware.rs  openapi.rs  server.rs  types.rs
crates/skill-http/src/analytics/: db.rs  mod.rs  types.rs
crates/skill-http/src/execution_history/: db.rs  mod.rs
crates/skill-http/src/routes/: mod.rs
crates/skill-http/tests/: api_config_tests.rs  api_execution_tests.rs  api_services_tests.rs  api_skills_tests.rs
crates/skill-http/tests/common/: mod.rs
crates/skill-http/tests/fixtures/: test-manifest.toml
crates/skill-http/tests/fixtures/test-responses/: skill-detail.json  skill-list.json
crates/skill-mcp/: Cargo.toml
crates/skill-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/skill-runtime/: Cargo.toml  build.rs
crates/skill-runtime/src/: audit.rs  config_mapper.rs  credentials.rs  docker_runtime.rs  engine.rs  errors.rs  executor.rs  git_loader.rs  git_source.rs  instance.rs  lib.rs  local_loader.rs  manifest.rs  metrics.rs  sandbox.rs  search_config.rs  skill_md.rs  types.rs
crates/skill-runtime/src/embeddings/: factory.rs  fastembed.rs  mod.rs  ollama.rs  openai.rs  types.rs
crates/skill-runtime/src/generation/: evaluation.rs  example_generator.rs  fixtures.rs  integration_tests.rs  llm_provider.rs  mod.rs  streaming.rs  validator.rs
crates/skill-runtime/src/jobs/: config.rs  mod.rs  sqlite.rs  storage.rs  types.rs  worker.rs
crates/skill-runtime/src/search/: bm25.rs  context.rs  fusion.rs  hybrid.rs  index_manager.rs  mod.rs  pipeline.rs  query_processor.rs  reranker.rs
crates/skill-runtime/src/vector_store/: file.rs  in_memory.rs  mod.rs  qdrant.rs  types.rs
crates/skill-web/: Cargo.toml  Trunk.toml  index.html  input.css  tailwind.config.js
crates/skill-web/src/: app.rs  lib.rs  main.rs  router.rs
crates/skill-web/src/api/: agent.rs  analytics.rs  client.rs  config.rs  error.rs  executions.rs  feedback.rs  mod.rs  search.rs  services.rs  skills.rs  types.rs
crates/skill-web/src/components/: button.rs  card.rs  icons.rs  import_config_modal.rs  install_skill_modal.rs  instance_editor.rs  layout.rs  mod.rs  navbar.rs  notifications.rs  result_card.rs  searchable_select.rs  sidebar.rs  tooltip.rs
crates/skill-web/src/components/run/: command_palette.rs  inline_parameter_editor.rs  mod.rs  skill_selector.rs  terminal_output.rs  tool_selector.rs  wizard_stepper.rs
crates/skill-web/src/hooks/: mod.rs  use_wizard_state.rs
crates/skill-web/src/pages/: analytics.rs  dashboard.rs  history.rs  mod.rs  not_found.rs  onboarding.rs  run.rs  search_test.rs  settings.rs  skill_detail.rs  skills.rs
crates/skill-web/src/store/: executions.rs  mod.rs  settings.rs  skills.rs  ui.rs
crates/skill-web/src/utils/: mod.rs
crates/skill-web/tests/: api_client_tests.rs  store_skills_tests.rs
docs/: CLAUDE_CODE_INSTALLATION.md  CONCEPTS.md  GETTING_STARTED.md  MANIFEST_GUIDE.md  QUICK_START.md  QUICK_START_CLAUDE_CODE.md  README.md  getting-started.md  implementation-status.md  project-status.md  skill-development.md  web-interface.md
docs-site/: .env.example  .gitignore  README.md  changelog.md  contributing.md  faq.md  index.md  package-lock.json  package.json  tsconfig.json  vercel.json
examples/: README.md
examples/wasm-skills/python-skill/: .gitignore  SKILL.md  pyproject.toml  skill.yaml
examples/wasm-skills/python-skill/src/: __init__.py  main.py
examples/wasm-skills/python-skill/tests/: __init__.py  test_skill.py
marketplace/: README.md  categories.json  schema.json
marketplace-web/: README.md  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json
plan/: open-source.md
scripts/: test-web-ui.sh  validate-manifests.js
tests/: README.md  mcp_integration_tests.sh  run-all-tests.sh  test-manifests.sh  verify-code-examples.sh
wit/: skill-interface.wit  skill-minimal.wit  skill-simple.wit
(+338 files in other folders)
