[package]
name = "skill-web"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for Skill Engine - built with Yew and WebAssembly"
keywords = ["yew", "wasm", "webui", "skill-engine"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "skill-web"
path = "src/main.rs"

[dependencies]
# Yew framework and ecosystem
# Note: Using yew 0.21 for compatibility with yewdux 0.11
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yewdux = "0.11"

# WASM bindings - pinned to 0.2.106 ecosystem
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "=0.4.56"
js-sys = "=0.3.83"
web-sys = { version = "=0.3.83", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "FocusEvent",
    "DragEvent",
    "DataTransfer",
    "File",
    "FileList",
    "FileReader",
    "Storage",
    "Location",
    "History",
    "Navigator",
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Clipboard",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
] }

# HTTP client for WASM
gloo-net = "0.6"
gloo-timers = "0.3"
gloo-storage = "0.3"
gloo-console = "0.3"
gloo-utils = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Utilities
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Error handling
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "=0.3.56"

[features]
default = []
