[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-example"
version = "1.0.0"
description = "Example Python skill demonstrating SDK features"
requires-python = ">=3.10"
dependencies = [
    "skill-engine-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
